[v7.0] Coverity analysis defect 168904: Uninitialized scalar variable

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.0.18
    • Affects Version/s: None
    • Component/s: None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2025-03-17
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar variable

      The variable will contain an arbitrary value left from earlier computations. Use of an uninitialized variable
      /src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp:840: UNINIT 168904 Declaring variable "cmp" without initializer.
      /src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp:853: UNINIT 168904 Using uninitialized value "cmp".

            Assignee:
            Ernesto Rodriguez Reina
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: