SERVER-101322 Fix uninitialized cmp variable (#33080)

GitOrigin-RevId: 301d1d08e8d59c8d5917c4bbe11103086835f862